--- a/introductory1.ipynb
+++ b/introductory1.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPIhx4bnvg8U8mjecfjiWNQ",
+      "authorship_tag": "ABX9TyPYMKjWFi4zdzh0E9Xhg9oE",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -28,12 +28,739 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 1,
       "metadata": {
-        "id": "e8HPbvADKfa1"
+        "id": "e8HPbvADKfa1",
+        "outputId": "fa56bb90-342f-4360-d4e7-5294ba339be1",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "outputs": [],
-      "source": []
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "2.5.1+cu124\n"
+          ]
+        }
+      ],
+      "source": [
+        "import torch\n",
+        "print(torch.__version__)\n"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "if torch.cuda.is_available():\n",
+        "    print(\"GPU is available!\")\n",
+        "    print(f\"Using GPU: {torch.cuda.get_device_name(0)}\")\n",
+        "else:\n",
+        "    print(\"GPU not available. Using CPU.\")"
+      ],
+      "metadata": {
+        "id": "A6toDqXjrgIl",
+        "outputId": "7f2ec79d-7f69-431d-c795-8087cb5bf90f",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 2,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "GPU not available. Using CPU.\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Creating a Tensor\n"
+      ],
+      "metadata": {
+        "id": "tbX3Ew1b4T89"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# using empty\n",
+        "a = torch.empty(2,3)"
+      ],
+      "metadata": {
+        "id": "_gq6D62l4Ysy"
+      },
+      "execution_count": 5,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "a"
+      ],
+      "metadata": {
+        "id": "yFu1moSh4y4M",
+        "outputId": "2b19221a-f905-44b7-a0f4-2729c511d04b",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 6,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "tensor([[1.5766e-19, 1.0256e-08, 4.1019e-08],\n",
+              "        [3.0957e+12, 1.0838e-08, 1.7092e-04]])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 6
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# check type\n",
+        "type(a)"
+      ],
+      "metadata": {
+        "id": "RYbhtJWl42wO",
+        "outputId": "0bc54d55-111a-465b-816c-1601b89d7386",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 7,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "torch.Tensor"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 7
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# using zeros\n",
+        "torch.zeros(2,3)"
+      ],
+      "metadata": {
+        "id": "JewsFfaI5EdT",
+        "outputId": "b4e8c8a3-218b-48b5-8a65-72209772a8c4",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 8,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "tensor([[0., 0., 0.],\n",
+              "        [0., 0., 0.]])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 8
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# using ones\n",
+        "torch.ones(2,3)"
+      ],
+      "metadata": {
+        "id": "B5DLueDw5HO_",
+        "outputId": "6d75b649-aad6-40dc-fe77-c1c211bf7fdf",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 9,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "tensor([[1., 1., 1.],\n",
+              "        [1., 1., 1.]])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 9
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# using rand\n",
+        "torch.rand(2,3)"
+      ],
+      "metadata": {
+        "id": "n-DkZe-K5PK4",
+        "outputId": "3e54720d-55cf-453d-ac5d-3cc990ad061b",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 10,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "tensor([[0.6846, 0.8287, 0.5663],\n",
+              "        [0.4342, 0.0909, 0.4823]])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 10
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# manual_seed\n",
+        "torch.manual_seed(100)\n",
+        "torch.rand(2,3)"
+      ],
+      "metadata": {
+        "id": "LoAndd-X5b8g",
+        "outputId": "ea7b6898-b981-42df-d62a-a8f804d94c53",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 11,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "tensor([[0.1117, 0.8158, 0.2626],\n",
+              "        [0.4839, 0.6765, 0.7539]])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 11
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "torch.manual_seed(100)\n",
+        "torch.rand(2,3)"
+      ],
+      "metadata": {
+        "id": "D86nqrlL5mTx",
+        "outputId": "6d9dadf3-7101-4755-f476-7fdca08d8220",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 12,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "tensor([[0.1117, 0.8158, 0.2626],\n",
+              "        [0.4839, 0.6765, 0.7539]])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 12
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# using tensor\n",
+        "torch.tensor([[1,2,3],[4,5,6]])"
+      ],
+      "metadata": {
+        "id": "wGQ1k7ia8lgb",
+        "outputId": "f67f028d-ed50-4e0f-b22d-62f5f476d6ef",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 13,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "tensor([[1, 2, 3],\n",
+              "        [4, 5, 6]])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 13
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# other ways\n",
+        "# arange\n",
+        "print(\"using arange ->\", torch.arange(0,10,2))"
+      ],
+      "metadata": {
+        "id": "SQFSB1S18rLO",
+        "outputId": "c64088ed-ebac-42ea-f3f8-5cb92a486391",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 15,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "using arange -> tensor([0, 2, 4, 6, 8])\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# using linspace\n",
+        "print(\"using linspace ->\", torch.linspace(0,10,10))"
+      ],
+      "metadata": {
+        "id": "9lsnFLn_8u7e",
+        "outputId": "4ca619c2-3d8d-4833-ba25-9934a906d0b7",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 16,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "using linspace -> tensor([ 0.0000,  1.1111,  2.2222,  3.3333,  4.4444,  5.5556,  6.6667,  7.7778,\n",
+            "         8.8889, 10.0000])\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# using eye\n",
+        "print(\"using eye ->\", torch.eye(5))"
+      ],
+      "metadata": {
+        "id": "vW_nZkkj8_ZX",
+        "outputId": "6a917e7d-de08-41db-869c-fd9b6a9af570",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 17,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "using eye -> tensor([[1., 0., 0., 0., 0.],\n",
+            "        [0., 1., 0., 0., 0.],\n",
+            "        [0., 0., 1., 0., 0.],\n",
+            "        [0., 0., 0., 1., 0.],\n",
+            "        [0., 0., 0., 0., 1.]])\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# using full\n",
+        "print(\"using full ->\", torch.full((3, 3), 5))"
+      ],
+      "metadata": {
+        "id": "fflBocOm9DCl",
+        "outputId": "36d5377d-474c-4eac-81b2-17ba8a97fd7b",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 18,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "using full -> tensor([[5, 5, 5],\n",
+            "        [5, 5, 5],\n",
+            "        [5, 5, 5]])\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Tensor Shapes"
+      ],
+      "metadata": {
+        "id": "Srdiq14r9O13"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "x = torch.tensor([[1,2,3],[4,5,6]])\n",
+        "print(x)"
+      ],
+      "metadata": {
+        "id": "6kktb5VI9QrA",
+        "outputId": "2998e82f-bf5f-4366-c5e7-1789d2dc99f6",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 19,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "tensor([[1, 2, 3],\n",
+            "        [4, 5, 6]])\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "x.shape"
+      ],
+      "metadata": {
+        "id": "tXTQVEmc9Z1L",
+        "outputId": "993f63a5-c106-4640-f5a2-f7caa074a146",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 20,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "torch.Size([2, 3])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 20
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "torch.empty_like(x)"
+      ],
+      "metadata": {
+        "id": "7l_cm_Z_9d_X",
+        "outputId": "e7745206-7c42-4a8e-c87e-e70143147be2",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 21,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "tensor([[      101270240, 138879389265712,               0],\n",
+              "        [              0,               0,               0]])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 21
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "torch.empty_like(x)"
+      ],
+      "metadata": {
+        "id": "YsuZsOhd9iLB",
+        "outputId": "b7629222-5527-4b8c-ac7e-f2dc725d8f98",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 22,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "tensor([[7309453675965983778, 8315168162784306286, 8367752027310484831],\n",
+              "        [7954801838398993778, 2459029315949324647, 7291666688462971446]])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 22
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "torch.zeros_like(x)"
+      ],
+      "metadata": {
+        "id": "nhl6MRq-9mIP",
+        "outputId": "d68feede-8b3b-4528-b3ee-6de8cff5ab80",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 23,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "tensor([[0, 0, 0],\n",
+              "        [0, 0, 0]])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 23
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "torch.ones_like(x)"
+      ],
+      "metadata": {
+        "id": "ReQqi1To9ngH",
+        "outputId": "34e58ee7-fbfd-43f2-f164-283e98b43baa",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 24,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "tensor([[1, 1, 1],\n",
+              "        [1, 1, 1]])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 24
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "torch.rand_like(x, dtype=torch.float32)"
+      ],
+      "metadata": {
+        "id": "TiTIr1fj9zn6",
+        "outputId": "d7818711-9c13-4391-c34e-61770f06529e",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 25,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "tensor([[0.2627, 0.0428, 0.2080],\n",
+              "        [0.1180, 0.1217, 0.7356]])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 25
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Tensor Data Types"
+      ],
+      "metadata": {
+        "id": "coDrNn1u92yA"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# find data type\n",
+        "x.dtype"
+      ],
+      "metadata": {
+        "id": "SAfI3tGq95aG",
+        "outputId": "30f723df-0d3c-4b98-b0cb-9cd5a9b5a13c",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 26,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "torch.int64"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 26
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# assign data type\n",
+        "torch.tensor([1.0,2.0,3.0], dtype=torch.int32)"
+      ],
+      "metadata": {
+        "id": "IGiVU85i9-04",
+        "outputId": "27acaee4-6726-4c5d-ea5e-388c3224f453",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 27,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "tensor([1, 2, 3], dtype=torch.int32)"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 27
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "torch.tensor([1,2,3], dtype=torch.float64)"
+      ],
+      "metadata": {
+        "id": "wV4zoPV6-CVa",
+        "outputId": "940a64eb-ff8e-408b-8afd-ae263162ee46",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 28,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "tensor([1., 2., 3.], dtype=torch.float64)"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 28
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# using to()\n",
+        "x.to(torch.float32)"
+      ],
+      "metadata": {
+        "id": "pG_bOjQV-F6N",
+        "outputId": "e0a7eeca-080a-4588-945f-14ad232ebb10",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 29,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "tensor([[1., 2., 3.],\n",
+              "        [4., 5., 6.]])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 29
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        " *Mathematical operations*"
+      ],
+      "metadata": {
+        "id": "QK75ZWuC-OxH"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "1. Element wise operation"
+      ],
+      "metadata": {
+        "id": "wUj4Yax3-9ak"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [],
+      "metadata": {
+        "id": "WcWFCjMH_ELH"
+      }
     }
   ]
 }
