--- a/autograd.ipynb
+++ b/autograd.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPIhx4bnvg8U8mjecfjiWNQ",
+      "authorship_tag": "ABX9TyMpNa4stRxM2AebUcEdcvBL",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -28,12 +28,61 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 1,
       "metadata": {
         "id": "NJRK18Ca8oxO"
       },
       "outputs": [],
-      "source": []
+      "source": [
+        "import torch"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "x = torch.tensor(3.0, requires_grad=True)"
+      ],
+      "metadata": {
+        "id": "nj58US6XoQ6U"
+      },
+      "execution_count": 2,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "y = x**2"
+      ],
+      "metadata": {
+        "id": "uSkTrkBpoXQ6"
+      },
+      "execution_count": 3,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "print(x)\n",
+        "print(y)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "I0_CnNOZoaQV",
+        "outputId": "dd0c9245-d762-4c2e-f789-2304d22e025e"
+      },
+      "execution_count": 4,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "tensor(3., requires_grad=True)\n",
+            "tensor(9., grad_fn=<PowBackward0>)\n"
+          ]
+        }
+      ]
     }
   ]
 }
